[FLINK-26660] Specify eventsource name when watching multiple namespaces